# NoEntrySignsDetector

./: CMakeLists.txt  GroundTruth.csv  GroundTruthNoEntry.csv  README.md  a.out  face  face.cpp  houghNoEntryDetector  noEntryDetector  noEntryDetector.cpp  no_entry.vec  report.docx  ~$report.docx
NoEntrycascade/: cascade.xml  stage0.xml  stage1.xml
